# LED-blinker

./: CMakeLists.txt  blinker.c  blinker.h  led_blinker.c  slaves.h
